# PG-VisitorPattern

./: .gitignore  CMakeLists.txt  README.md
include/: Uncopyable.h  Visitable.h  VisitableItems.h  Visitor.h  VisitorImpl.h  lower.h  lower_impl.h  lower_impl_c.h  lower_impl_imperative.h
src/: CMakeLists.txt  TaxVisitor.cpp  lower.cpp  lower_impl.cpp  lower_impl_imperative.cpp
test/: CMakeLists.txt  tests-visitor.cpp
